--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
     "@types/supertest": "^2.0.12",
+    "crypto": "^1.0.1",
     "jest": "^27.5.1",
     "prisma": "^3.12.0",
     "supertest": "^6.2.2",
