--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test:unit": "jest",
+    "test:e2e": "jest --config jest-e2e.config.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.12.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3"
   },
   "devDependencies": {
@@ -18,12 +20,16 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
+    "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
+    "child_process": "^1.0.2",
     "crypto": "^1.0.1",
     "jest": "^27.5.1",
+    "pg": "^8.7.3",
     "prisma": "^3.12.0",
     "supertest": "^6.2.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "util": "^0.12.4"
   }
 }
